fix top issue on mobile

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -164,7 +164,7 @@
   gap: 20px;
   height: auto;
   position: sticky;
-  top: 0px;
+
   padding-top: 20px;
   padding-bottom: 10px;
   background-color: white;
